# magnetic_wheel_gazebo_plugin

./: CMakeLists.txt  README.md  package.xml
src/: MagneticWheelPlugin.cpp
