<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>magnetic_wheel_gazebo_plugin</name>
  <version>0.0.0</version>
  <description>magbot wall climbing plugin</description>
  <maintainer email="aico@aico.company">aicompany</maintainer>
  <license>www.aico.company</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
